# FoodFusionAI

./: .gitignore  DEVELOPMENT.md  README.md  function.json  function_app.py  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main_foodfusionai.yml
assets/: architecture.drawio
foodfusionai/: CONFIG.py  app.py  production_config.yaml  redis_rate_limiting.py  send_mail.py  utils.py
foodfusionai/database/: auth.py  crud.py  database_setup.py
foodfusionai/llm/: model_generations.py  prompts.py  rag.py
foodfusionai/llm/chat_history/: chat_history.py
foodfusionai/logs/: logger_config.py
foodfusionai/models/: groceries.py  user.py
foodfusionai/routers/: llm.py  response_stream.py  storage.py  users.py
src/backend/: app.py  config.yaml  function.json  function_app.py  send_mail.py  utils.py  verification_mail.py
src/backend/api/: app.py
src/backend/api_models/: models.py
src/backend/database/: auth.py  crud.py  database.py  database_setup.py
src/backend/database/components/: user.py
src/backend/llm/: model_generations.py  prompts.py  rag.py  react_agent.py  recipe.py
src/backend/llm/chat_history/: chat_history.py  setup.py
src/backend/logs/: logger_config.py  loggers.py
src/backend/models/: api_models.py  groceries.py  llm_requests.py  user.py
src/backend/receipt/: img_reader.py
src/backend/routers/: auth.py  llm.py  requests.py  response_stream.py  storage.py  users.py
src/frontend/: index.html
tests/: test_database.py  test_template.py
